# DeepResearchAgent

./: .gitignore  AgentInteraction.ipynb  ChainOfAgentsCode.py  DeepResearchAgent.py  DeepResearchNotebook.ipynb  Dockerfile  GeminiFlashTR1.ipynb  README.md  WebSearchAgent.py  agent_tools.py  agent_utils.py  config.py  consumption_H100_Chatbot.md  crawl3ai_notebook.ipynb  extensive_search.py  gui.py  hello.py  markdown_output.md  pyproject.toml  requirements.txt  research_notebook.ipynb  settings.json  simple_agent_notebook.ipynb  simple_extended_search.py  streamlit_app.py  task_manager.py  test.ipynb  webpage_extractor.py  websearch_notebook.ipynb  write_article.py
dev/: ControlFlowNotebook.ipynb  agent_tools.py  code_execution.py
dev/examples/: DeepResearchAgent.py  agent_interaction_demo.py  async_crawler_example.py  sequential_answering_agent.py  simple_extended_search.py
docs/: PydanticAI_Documentation.md
examples/: WebSearchAgent.py  google_search_agent.py  note_taking.py  rate_limiting_problem.py  simple_extended_search.py
notebooks/: ControlFlowNotebook.ipynb  DeepResearchNotebook.ipynb  FirecrawlNotebook.ipynb  Imagen3Notebook.ipynb  WebPageExtrator.ipynb  simple_agent_notebook.ipynb
pydantic_ai_docs/: Agents - PydanticAI.md  Contributing - PydanticAI.md  Debugging and Monitoring - PydanticAI.md  Dependencies - PydanticAI.md  Getting Help - PydanticAI.md  Graphs - PydanticAI.md  Installation - PydanticAI.md  Messages and chat history - PydanticAI.md  Models - PydanticAI.md  PydanticAI.md
system_prompts/: chain_of_agents.txt  search_query_recommendation.txt
